hphp/test/slow/array_iterator/array-traversable.php.expectf
bool(true)
bool(true)
bool(true)
bool(false)
Traversable Array 
array(0) {
}
KeyedTraversable Array 
array(0) {
}
Indexish Array 
array(0) {
}

Fatal error: Argument 1 passed to ifoo() must be an instance of IFoo, array given in %s/test/slow/array_iterator/array-traversable.php on line 23
